Update syntax.