@@ -22,7 +22,6 @@ import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class BidRequestOrtb25To26Converter implements BidRequestOrtbVersionConverter {
@@ -59,7 +58,7 @@ public class BidRequestOrtb25To26Converter implements BidRequestOrtbVersionConve
     private static List<Imp> moveImpsData(List<Imp> imps) {
         final List<Imp> modifiedImps = CollectionUtils.emptyIfNull(imps).stream()
                 .map(BidRequestOrtb25To26Converter::moveImpData)
-                .collect(Collectors.toList());
+                .toList();
 
         if (modifiedImps.stream().allMatch(Objects::isNull)) {
             return null;
@@ -67,7 +66,7 @@ public class BidRequestOrtb25To26Converter implements BidRequestOrtbVersionConve
 
         return IntStream.range(0, imps.size())
                 .mapToObj(i -> ObjectUtils.defaultIfNull(modifiedImps.get(i), imps.get(i)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Imp moveImpData(Imp imp) {
